[gd_scene load_steps=9 format=3 uid="uid://drpgreb2vvq7r"]

[ext_resource type="Script" path="res://data/player/player.gd" id="1_fubbc"]
[ext_resource type="Texture2D" uid="uid://cyxff6ncmbn0k" path="res://image/player/player.png" id="1_obrvs"]
[ext_resource type="Texture2D" uid="uid://hwghpurqye52" path="res://image/decals/white.png" id="3_yrfd8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydg5e"]
radius = 66.0303

[sub_resource type="Gradient" id="Gradient_sftgk"]
colors = PackedColorArray(0.415686, 0.741176, 0.811765, 0.803922, 0.415686, 0.741176, 0.811765, 0.380392)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ooqun"]
gradient = SubResource("Gradient_sftgk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s64c3"]
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.8
color = Color(0.266667, 0.909804, 0.929412, 1)
color_ramp = SubResource("GradientTexture1D_ooqun")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r8raq"]
polygon = PackedVector2Array(-60, -23, -62, -15, -60, -9, -62, -2, -60, 5, -56, 12, -52, 14, -52, 17, -54, 20, -52, 25, -49, 30, -44, 33, -42, 39, -38, 41, -38, 47, -34, 54, -28, 58, -20, 58, -17, 60, -7, 59, 1, 59, 6, 55, 13, 53, 22, 48, 33, 45, 41, 41, 65, 41, 58, 44, 58, 49, 61, 52, 67, 53, 92, 53, 95, 50, 96, 44, 101, 42, 108, 35, 112, 37, 121, 37, 121, 34, 120, 31, 123, 31, 124, 33, 128, 33, 131, 28, 133, 24, 133, 13, 131, 10, 128, 5, 123, 8, 121, 7, 124, 4, 122, 2, 111, 2, 109, -3, 96, -5, 87, -12, 81, -12, 79, -10, 75, -10, 63, -24, 58, -27, 48, -29, 43, -38, 43, -41, 35, -49, 29, -58, 21, -62, 10, -59, 0, -60, -11, -56, -13, -57, -18, -57, -27, -52, -29, -48, -31, -47, -38, -47, -46, -45, -52, -38, -54, -31)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_fubbc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ydg5e")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(36, 0)
rotation = 1.5708
texture = ExtResource("1_obrvs")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Position_M" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(131, 18)

[node name="Position_L" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(128, 9)

[node name="Position_R" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(128, 25)

[node name="ShootParticle" type="GPUParticles2D" parent="."]
position = Vector2(128, 18)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_s64c3")
texture = ExtResource("3_yrfd8")
lifetime = 0.2
one_shot = true

[node name="Shadow" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_r8raq")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
